--- a/noa-klient/pom.xml
+++ b/noa-klient/pom.xml
@@ -14,4 +14,13 @@
 
     <name>NOA-klient</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
